# hl7_v2_lsp

./: Cargo.toml  build.rs
.github/workflows/: release.yml
src/: documentation.json  hl7_docs.rs  main.rs
tree-sitter-hl7v2/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-hl7v2/bindings/c/: tree-sitter-hl7v2.pc.in
tree-sitter-hl7v2/bindings/c/tree_sitter/: tree-sitter-hl7v2.h
tree-sitter-hl7v2/bindings/go/: binding.go  binding_test.go
tree-sitter-hl7v2/bindings/node/: binding.cc  index.js
tree-sitter-hl7v2/bindings/python/tests/: test_binding.py
tree-sitter-hl7v2/bindings/python/tree_sitter_hl7v2/: __init__.py  binding.c
tree-sitter-hl7v2/bindings/rust/: build.rs  lib.rs
tree-sitter-hl7v2/bindings/swift/TreeSitterHl7v2Tests/: TreeSitterHl7v2Tests.swift
tree-sitter-hl7v2/src/: grammar.json  node-types.json  parser.c
